tests/ui/suggestions/suggest-create-closure-issue-150701.stderr
error[E0618]: expected function, found `()`
  --> $DIR/suggest-create-closure-issue-150701.rs:11:16
   |
LL |     f(async || {}());
   |                ^^--
   |                |
   |                call expression requires function
   |
help: if you meant to create this closure and immediately call it, surround the closure with parentheses
   |
LL |     f((async || {})());
   |       +           +

error[E0277]: `{async closure@$DIR/suggest-create-closure-issue-150701.rs:11:7: 11:15}` is not a future
  --> $DIR/suggest-create-closure-issue-150701.rs:11:7
   |
LL |     f(async || {}());
   |     - ^^^^^^^^^^^^^ `{async closure@$DIR/suggest-create-closure-issue-150701.rs:11:7: 11:15}` is not a future
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Future` is not implemented for `{async closure@$DIR/suggest-create-closure-issue-150701.rs:11:7: 11:15}`
note: required by a bound in `f`
  --> $DIR/suggest-create-closure-issue-150701.rs:8:15
   |
LL | fn f(_c: impl Future<Output = ()>) {}
   |               ^^^^^^^^^^^^^^^^^^^ required by this bound in `f`

error[E0277]: `{async closure@$DIR/suggest-create-closure-issue-150701.rs:13:7: 13:15}` is not a future
  --> $DIR/suggest-create-closure-issue-150701.rs:13:7
   |
LL |     f(async || {});
   |     - ^^^^^^^^^^^ `{async closure@$DIR/suggest-create-closure-issue-150701.rs:13:7: 13:15}` is not a future
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Future` is not implemented for `{async closure@$DIR/suggest-create-closure-issue-150701.rs:13:7: 13:15}`
note: required by a bound in `f`
  --> $DIR/suggest-create-closure-issue-150701.rs:8:15
   |
LL | fn f(_c: impl Future<Output = ()>) {}
   |               ^^^^^^^^^^^^^^^^^^^ required by this bound in `f`
help: use parentheses to call this closure
   |
LL |     f((async || {})());
   |       +           +++

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0618.
For more information about an error, try `rustc --explain E0277`.
